# gel

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
etc/: deploy-docs.sh
examples/: matmult.rs
gel/: index.html  sidebar-items.js  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html
gel/vector/: sidebar-items.js  struct.Vec2.html  struct.Vec3.html  struct.Vec4.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Deref.js  trait.DerefMut.js  trait.Div.js  trait.Mul.js  trait.Sub.js
implementors/num/traits/: trait.Zero.js
implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
rustc_serialize/json/: struct.Parser.html
src/: lib.rs  matrix.rs  vector.rs
src/gel/: lib.rs.html  vector.rs.html
