[package]
name = "gel"
version = "0.1.1"
authors = ["Cole Reynolds <cpjreynolds@gmail.com>"]
description = "OpenGL Mathematics. A wrapper around nalgebra."
documentation = "https://cpjreynolds.github.io/gel"
repository = "https://github.com/cpjreynolds/gel"
homepage = "https://github.com/cpjreynolds/gel"
readme = "README.md"
license = "MIT"

[dependencies]
num = "*"
nalgebra = "*"
rustc-serialize = "*"

[dependencies.glium]
git = "https://github.com/tomaka/glium.git"
