[package]
name = "gel"
version = "0.1.2"
authors = ["Cole Reynolds <cpjreynolds@gmail.com>"]
description = "OpenGL Mathematics. A wrapper around nalgebra."
documentation = "https://cpjreynolds.github.io/gel"
repository = "https://github.com/cpjreynolds/gel"
homepage = "https://github.com/cpjreynolds/gel"
readme = "README.md"
license = "MIT"

[dependencies]
num = "0.1"
nalgebra = "0.3"
rustc-serialize = "0.3"

[dependencies.glium]
version = "0.12"
features = ["nalgebra"]
default-features = false
